src-tauri/build_log_4.txt
    Checking tauri-app v0.1.0 (D:\WindowsProyects\Antigravity\Fork\src-tauri)
warning: unused import: `LogsOptions`
 --> src\core\sandbox.rs:4:104
  |
4 | use bollard::query_parameters::{CreateContainerOptions, StartContainerOptions, RemoveContainerOptions, LogsOptions, WaitContainerOptions};
  |                                                                                                        ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::time::Duration`
 --> src\core\sandbox.rs:8:5
  |
8 | use std::time::Duration;
  |     ^^^^^^^^^^^^^^^^^^^

warning: unused import: `ort::session::builder::SessionBuilder`
 --> src\core\local_llm.rs:3:5
  |
3 | use ort::session::builder::SessionBuilder;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::sync::Arc`
 --> src\core\local_llm.rs:6:5
  |
6 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `std::path::PathBuf`
 --> src\db\mod.rs:3:5
  |
3 | use std::path::PathBuf;
  |     ^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> src\core\sandbox.rs:54:88
   |
54 |             Some(CreateContainerOptions{ name: Some(container_name.clone()), platform: None }),
   |                                                                                        ^^^^ expected `String`, found `Option<_>`
   |
   = note: expected struct `std::string::String`
                found enum `std::option::Option<_>`

For more information about this error, try `rustc --explain E0308`.
warning: `tauri-app` (lib) generated 5 warnings
error: could not compile `tauri-app` (lib) due to 1 previous error; 5 warnings emitted
